@@ -1,9 +1,13 @@
 2006-01-23  Jan Nieuwenhuizen  <janneke@gnu.org>
 
-	* flower/include/std-string.hh: Oops, bugfix for --disable-std-string.
+	* flower/international.cc: 
+	* flower/include/international.hh: 
 
+	* flower/getopt-long.cc: 
 	* flower/include/getopt-long.hh: Use std::string [interface].
 	Update callers.
+
+	* flower/include/std-string.hh: Oops, bugfix for --disable-std-string.
 
 	* stepmake/stepmake/executable-rules.make: Add dependency on
 	module libraries.
